kubernetes/shipping-deployment.yaml
# Manifest file for shipping-service pods deployment
apiVersion: apps/v1
kind: Deployment
# identifier for this deployment
metadata:
  name: shipping
  labels:
    app: microservices
    service: shipping
# specified replicas and pod templates
spec:
  replicas: 1
  selector:
    matchLabels:
      service: shipping
  template:
    metadata:
      labels:
        app: microservices
        service: shipping
    spec:
      # specified the container configuration (image, ports, env)
      containers:
      - name: shipping-service
        image: ghcr.io/airellrmdn/shipping-service:latest
        ports:
          - containerPort: 3001
